<resources>
    <string name="app_name">StudentFile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- String used for list item for first fragment -->
    <string name="cine">CINE : </string>
    <string name="nom">Nom : </string>
    <string name="prenom">Prénom : </string>
    <string name="ne_le">Né le : </string>
    <string name="niveau">Niveau : </string>
</resources>