<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".FirstFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageEtudiant"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="14dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="5dp"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:src="@mipmap/ic_launcher">
    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cineEtudiant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/input_item_style"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="@string/cine"
                android:textColor="#4E4E4E"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomEtudiant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input_item_style"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="@string/nom"
                android:textColor="#4E4E4E"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prenomEtudiant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/input_item_style"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="@string/prenom"
                android:textColor="#4E4E4E"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/neLeEtudiant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input_item_style"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="@string/ne_le"
                android:textColor="#4E4E4E"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/niveauEtudiant"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/input_item_style"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="@string/niveau"
                android:textColor="#4E4E4E"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>